[gd_scene load_steps=7 format=3 uid="uid://6wvibfjgj0qs"]

[ext_resource type="Texture2D" uid="uid://db3s5porrsgif" path="res://images/background/encounter_background.jpg" id="1_8r3yw"]
[ext_resource type="Script" path="res://scripts/encounter_1.gd" id="1_rshki"]
[ext_resource type="Texture2D" uid="uid://hfoyvrmqnih5" path="res://images/characters/casino_encounter_1/golden-blank-slot-machine-and-slots-game-coins-explosion.png" id="2_4sqvm"]
[ext_resource type="Texture2D" uid="uid://bm1yqtwmryf6" path="res://images/characters/casino_encounter_1/Lucky_7.png" id="3_ilvpd"]
[ext_resource type="Texture2D" uid="uid://bo10s4mvrl2iy" path="res://images/characters/black-cat-png-cute-cat-transparent.png" id="4_i3axh"]
[ext_resource type="AudioStream" uid="uid://c7jbumpbtx7b6" path="res://sounds/Lets Go Gambling.mp3" id="6_d6vrj"]

[node name="CasinoSlot" type="Node2D"]
script = ExtResource("1_rshki")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 647.0
color = Color(0, 0, 0, 1)

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(577.5, 324.5)
scale = Vector2(1.71577, 1.6125)
texture = ExtResource("1_8r3yw")

[node name="Slotmachine" type="Sprite2D" parent="."]
position = Vector2(573, 350)
scale = Vector2(0.816667, 0.745)
texture = ExtResource("2_4sqvm")

[node name="Lucky 7_1" type="Sprite2D" parent="."]
visible = false
position = Vector2(511, 364)
scale = Vector2(0.138889, 0.203593)
texture = ExtResource("3_ilvpd")

[node name="Lucky 7_2" type="Sprite2D" parent="."]
visible = false
position = Vector2(575, 364)
scale = Vector2(0.138889, 0.203593)
texture = ExtResource("3_ilvpd")

[node name="Lucky 7_3" type="Sprite2D" parent="."]
visible = false
position = Vector2(642, 364)
scale = Vector2(0.138889, 0.203593)
texture = ExtResource("3_ilvpd")

[node name="Zimba" type="Sprite2D" parent="."]
visible = false
position = Vector2(637, 358)
scale = Vector2(0.375, 0.346667)
texture = ExtResource("4_i3axh")

[node name="Lucky_label" type="Label" parent="."]
offset_right = 1154.0
offset_bottom = 117.0
theme_override_colors/font_color = Color(0.957844, 0.664739, 0.0195007, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 54
text = "You come across a magical slot machine.
What do you do?"
horizontal_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 476.0
offset_top = 253.0
offset_right = 670.0
offset_bottom = 291.0
color = Color(0.932944, 0.686681, 0, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_d6vrj")

[node name="Bet_Button" type="Button" parent="."]
offset_left = 28.0
offset_top = 490.0
offset_right = 188.0
offset_bottom = 622.0
theme_override_colors/font_color = Color(0.956863, 0.666667, 0.0196078, 1)
theme_override_font_sizes/font_size = 31
text = "Bet"

[node name="Leave" type="Button" parent="."]
offset_left = 956.0
offset_top = 488.0
offset_right = 1116.0
offset_bottom = 620.0
theme_override_colors/font_color = Color(0.956863, 0.666667, 0.0196078, 1)
theme_override_font_sizes/font_size = 31
text = "Leave"

[node name="Name" type="Label" parent="."]
offset_left = 536.0
offset_top = 258.0
offset_right = 613.0
offset_bottom = 281.0
theme_override_colors/font_color = Color(0.733, 1.89635e-05, 1.05888e-05, 1)
text = "By Grimm"

[connection signal="pressed" from="Bet_Button" to="." method="_on_bet_button_pressed"]
[connection signal="pressed" from="Leave" to="." method="_on_leave_pressed"]
